fix: fixed header overflow

--- a/frontend/src/components/header.css
+++ b/frontend/src/components/header.css
@@ -1,10 +1,11 @@
 header {
-  width: 100dvw;
   height: 30px;
   display: grid;
+  width: 100%;
   padding: 0 50px;
   box-sizing: border-box;
   grid-template-columns: 1fr 1fr 1fr;
+  border: 0;
 }
 
 header section {
@@ -39,4 +40,5 @@ header section {
   border: none;
   font-weight: bold;
   border-radius: 25px;
+  cursor: pointer;
 }
